Changed how MathJax renders overflow
Math blocks that are too wide now scroll horizontally rather than extend the entire page. This is especially noticable on mobile, where math equations are often larger than a normal phone screen.

However, as a result of this change, the use of the \tag command in align environments no longer works properly. As such, all posts that make use of \tag have been changed to use \text instead.

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -78,6 +78,11 @@ h4.inline {
   display: inline;
 }
 
+.MJXc-display {
+  overflow-x: auto; /* add scrollbars to wide math blocks*/
+  overflow-y: hidden; /* add scrollbars to wide math blocks*/
+}
+
 /*
    Solarized Light
    http://ethanschoonover.com/solarized
