--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -74,8 +74,11 @@ h3.inline {
   display: inline;
 }
 
-h4.inline {
-  display: inline;
+details.bordered {
+  /* background-color: rgba(243, 243, 243, .5); */
+  border-radius: 10px;
+  border: 2px solid rgba(63, 146, 191, 0.58);
+  background-color: rgba(63, 146, 191, 0.1);
 }
 
 .MJXc-display {
