Minor edits & fixes 8
- Fixed MathJax rendering (broke recently for some reason)
- Grammatical edits to inclusion-exclusion, and dottie post.
- Math style fixes to kinematics post.

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -81,7 +81,7 @@ details.bordered {
   background-color: rgba(63, 146, 191, 0.1);
 }
 
-.MJXc-display {
+.MathJax_Display {
   overflow-x: auto; /* add scrollbars to wide math blocks*/
   overflow-y: hidden; /* add scrollbars to wide math blocks*/
 }
